--- a/src/app/shared/components/tabs/tabs.component.scss
+++ b/src/app/shared/components/tabs/tabs.component.scss
@@ -33,8 +33,8 @@
     justify-content: center;
 
     border-radius: 8px;
-    color: white;
-    line-height: 1;
+    color: white; 
+    line-height: 1rem;  
     z-index: 1;
     transition: color 0.4s ease-in-out,background-color 0.1s ease-in;
 
@@ -43,7 +43,7 @@
     &--cover-selected {
       box-sizing: border-box;
       position: absolute;
-      height: inherit;
+      height: inherit; 
 
       background-color: #4b4848;
       border: 1px solid #2b2a2a;
@@ -85,3 +85,5 @@
     }
   }
 }
+
+
