--- a/src/app/shared/components/switch/switch.component.scss
+++ b/src/app/shared/components/switch/switch.component.scss
@@ -51,6 +51,7 @@
     right: 0;
     bottom: 0;
     background-color: #f2f2f2;
+    box-shadow: inset 0px 1px 2px 1px rgb(0 0 0 / 4%);
   }
 
   &__slider:before {
