--- a/src/app/shared/components/widget/widget.component.scss
+++ b/src/app/shared/components/widget/widget.component.scss
@@ -10,9 +10,9 @@
   box-sizing: border-box;
 
   background: white;
-  box-shadow: 0 1px 0 0 $separator-color, 0 0 0 1px #e7e8ec;
+  box-shadow: rgb(0 0 0 / 10%) 0px 1px 2px 0px;
 
-  border-radius: 8px;
+  border-radius: 12px;
 
   user-select: none;
 
