--- a/src/app/shared/components/tabs/tabs.component.scss
+++ b/src/app/shared/components/tabs/tabs.component.scss
@@ -11,6 +11,14 @@
   flex-direction: column;
   height: 100%;
 
+  &__title-container {
+    padding: 4px;
+
+    background: #fafafa;
+    border-radius: 12px;
+    box-shadow: inset 0px 1px 2px 1px rgb(0 0 0 / 4%);
+  }
+
   &__tabs-section {
     position: relative;
     box-sizing: border-box;
@@ -20,9 +28,8 @@
   }
 
   &__title {
-    padding: 8px 12px;
+    padding: 0px 8px 4px 8px;
 
-    background: $background-header-primary;
     font-family: $font-system;
     font-size: 14px;
   }
@@ -33,8 +40,8 @@
     justify-content: center;
 
     border-radius: 8px;
-    color: white; 
-    line-height: 1rem;  
+    line-height: 1rem;
+    color: #474747;
     z-index: 1;
     transition: color 0.4s ease-in-out,background-color 0.1s ease-in;
 
@@ -45,14 +52,18 @@
       position: absolute;
       height: inherit; 
 
-      background-color: #4b4848;
-      border: 1px solid #2b2a2a;
+      background-color: white;
       border-radius: 8px;
       transition: left 0.4s ease-in-out;
+      box-shadow: rgb(0 0 0 / 10%) 0px 1px 2px 0px;
     }
 
     &:not(.tabs__tab.tabs__tab--selected):hover {
-      background-color: #00000026;
+      background-color: rgba(0, 0, 0, 0.05);
+    }
+
+    &--selected {
+      color: $font-primary;
     }
   }
 
