--- a/src/app/shared/ubuntu/ubuntu-container/ubuntu-container.component.scss
+++ b/src/app/shared/ubuntu/ubuntu-container/ubuntu-container.component.scss
@@ -35,11 +35,11 @@
   }
 
   &__content {
-    border-radius: 8px;
+    border-radius: 12px;
     background: white;
 
     &--with-borders {
-      box-shadow: 0 1px 0 0 $separator-color, 0 0 0 1px #e7e8ec;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
     }
   }
 }
