--- a/src/app/shared/components/settings/setting/setting.component.scss
+++ b/src/app/shared/components/settings/setting/setting.component.scss
@@ -1,6 +1,6 @@
 .setting {
   display: flex;
-  height: 64px;
+  height: 56px;
   justify-content: space-between;
   align-items: center;
   padding: 0 16px;
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     line-height: 1rem;
+    font-size: 14px;
   }
 
   &__control {
@@ -16,6 +17,11 @@
   }
 
   mat-icon {
+    width: 20px;
+    height: 20px;
     margin-right: 8px;
+
+    font-size: 20px;
+    color: #4b4848
   }
 }
