--- a/src/app/shared/components/widget/widget.component.scss
+++ b/src/app/shared/components/widget/widget.component.scss
@@ -5,6 +5,7 @@
   width: fit-content;
   display: flex;
   flex-direction: column;
+  gap: 12px;
   padding: 16px;
 
   box-sizing: border-box;
@@ -12,20 +13,16 @@
   background: white;
   box-shadow: rgb(0 0 0 / 10%) 0px 1px 2px 0px;
 
-  border-radius: 12px;
+  border-radius: 24px;
 
   user-select: none;
 
-  &__title {
+  &__title-section {
     display: flex;
     align-items: center;
     gap: 4px;
-    margin-top: 0;
-    margin-bottom: 8px;
 
     font-family: $font-system;
-    font-size: 14px;
-    color: $font-primary;
   }
 
   &__info {
@@ -39,5 +36,26 @@
 
   &__actions {
     margin-left: auto;
+  }
+
+  &__title {
+    display: flex;
+    font-weight: 500;
+    align-items: center;
+    font-size: 14px;
+    color: #4b4848;
+    gap: 8px;
+    margin: 0px;
+  }
+
+  &__illustration {
+    font-size: 16px;
+    height: 16px;
+    width: 16px;
+    line-height: 16px;
+    color: white;
+    padding: 6px;
+    background-color: $color-primary;
+    border-radius: 10px;
   }
 }
